[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Roy Vegard Ovesen <roy.vegard.ovesen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.9"